Loom: one carrier pool, LoomUtils.CARRIERS
It replaces LoomUtils.InheritedThreadCarriers and LoomUIFiberRunner.Handoff,
both cached daemon platform pools for continuations that can't run where
they were submitted.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>